[project]
name = "refi-wfe-client"
version = "0.1.0"
description = "REFI-WFE client SDK — typed Python client for the Refinium AI Platform Workflow Engine."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refi_wfe_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
